--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,14 @@ tzdata==2025.3
 urllib3==2.6.2
 vaderSentiment==3.3.2
 Werkzeug==3.1.4
+pandas
+numpy
+scikit-learn
+nltk
+textblob
+vaderSentiment
+fuzzywuzzy
+python-Levenshtein
+python-dotenv
+flask
+gunicorn # For production deployment
